# benchmarks

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  PLAYGROUND.md  README.md  SECURITY.md  docker-compose.yml  requirements.txt  run_benchmarks.py  run_tts.py  secretmanager.py  tsconfig.json  wer_calculator.py
runner/: .dockerignore  Dockerfile  Dockerfile.api  README.md  alembic.ini  pyproject.toml  pytest.ini
runner/scripts/: check_arena_keys.py  ci_select.py  methodology_marker_check.py  precompute_vad_offsets.py
runner/src/coval_bench/: __init__.py  __main__.py  audio.py  config.py  logging.py  stt_preview.py
runner/src/coval_bench/api/: __init__.py  app.py  cache.py  common.py  compression.py  deps.py  internal.py  main.py  ratelimit.py  request_logging.py  schemas.py
runner/src/coval_bench/arena/: __init__.py  _render.py  audio_store.py  generate.py  models.py  monitoring.py  pairing.py  prompts.py  rating.py  seed.py  snapshot.py  store.py  tune_scale.py
runner/src/coval_bench/datasets/: __init__.py  loader.py  manifest.py  minds14_audio.py
runner/src/coval_bench/db/: __init__.py  arena_store.py  cli.py  conn.py  models.py  seed_arena.py  writer.py
runner/src/coval_bench/metrics/: __init__.py  registry.py  ttfa.py  ttft.py  wer.py
runner/src/coval_bench/migrations/: __init__.py  import_legacy.py
runner/src/coval_bench/providers/: _http_session.py  base.py
runner/src/coval_bench/registries/: __init__.py  benchmarks.py  metrics.py  models.py  provider_keys.py  stealth.py  tags.py
runner/src/coval_bench/runner/: __init__.py  artifacts.py  config.py  orchestrator.py  probe.py  retry.py
runner/src/coval_bench/s2s/: __init__.py  backfill.py  fetch_v2v.py  samples.py
runner/tests/: conftest.py
runner/tests/api/: __init__.py  conftest.py  test_aggregates.py  test_arena.py  test_compression.py  test_cors.py  test_health.py  test_internal_access.py  test_leaderboard.py  test_posthog.py  test_providers.py  test_ratelimit.py  test_request_logging.py  test_results.py  test_robots.py  test_runs.py
runner/tests/providers/: test_http_session.py
runner/tests/providers/stt/: conftest.py  test_assemblyai.py  test_azure.py  test_baseten.py  test_cartesia.py  test_deepgram.py  (+15 more)
runner/tests/runner/: test_probe.py  test_tts_smoke_cli.py
runner/tests/unit/: conftest.py  test_arena_audio_store.py  test_arena_generate.py  test_arena_monitoring.py  test_arena_pairing.py  test_arena_rating.py  test_arena_snapshot.py  test_arena_store.py  test_arena_tune_scale.py  test_build_dataset.py  test_ci_select.py  test_config.py  test_dataset_loader.py  test_db_writer.py  test_framework.py  test_hf_source.py  test_import_legacy.py  test_logging.py  test_methodology_marker_check.py  test_metric_registry.py  test_orchestrator.py  test_provider_config.py  test_publish_reviewed_stt_v2.py  test_run_artifacts.py  test_s2s_backfill.py  test_s2s_fetch.py  test_s2s_samples.py  test_stealth.py  test_ttfa.py  test_ttft.py  test_tts_common.py  test_tts_voice_assignment.py  test_wer.py  test_wildasr.py
(+371 files in other folders)
