# Copyright 2026 The Coval Benchmarks Authors
# SPDX-License-Identifier: Apache-2.0

[project]
name = "coval-bench"
version = "0.1.0"
description = "Public, OSS voice-AI benchmarks runner + API for benchmarks.coval.ai"
license = { text = "Apache-2.0" }
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
    # Core
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "structlog>=24",
    "click>=8.1",
    "httpx[http2]>=0.27",
    "anyio>=4.4",
    # Audio
    "soundfile>=0.12",
    "librosa>=0.10",
    "numpy>=1.26",
    # DB
    "psycopg[binary,pool]>=3.2",
    "alembic>=1.13",
    # API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "slowapi>=0.1.9",
    # WebSocket clients (STT providers)
    "websockets>=12,<14",
    # TTS provider SDKs
    "openai>=1.40",
    "cartesia>=2",
    "elevenlabs>=1.5",
    "aiohttp>=3.9",
    # Dataset
    "google-cloud-storage>=2.18",
    # WER
    "jiwer>=3.0",
    "whisper-normalizer>=0.0.10",
]

[project.optional-dependencies]
google-stt = ["google-cloud-speech>=2.27"]
hume-tts = ["hume>=0.7"]

[project.scripts]
coval-bench = "coval_bench.__main__:cli"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-vcr>=1.0.2",
    "vcrpy>=6.0",
    "pytest-cov>=5",
    "httpx>=0.27",
    "mypy>=1.10",
    "ruff>=0.5",
    "types-requests>=2.32",
    "pytest-postgresql>=6",
    "pytest-socket>=0.7",
    "asgi-lifespan>=2.1.0",
    "pip-licenses>=5.5.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coval_bench"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = ["E", "F", "I", "B", "UP", "SIM", "S", "ANN"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN401", "S311"]
"src/coval_bench/providers/stt/*.py" = ["ANN401"]
# FastAPI uses Depends/Query in function argument defaults by design
"src/coval_bench/api/routers/*.py" = ["B008"]

[tool.ruff.format]
# defaults

[tool.mypy]
strict = true
python_version = "3.12"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "librosa.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "soundfile.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jiwer.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "whisper_normalizer.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "websockets.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cartesia.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "elevenlabs.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "hume.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiohttp.*"
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/coval_bench"]
omit = ["src/coval_bench/__main__.py"]
